[package]
name = "input_board_demo"
version = "0.1.0"
authors = ["TENX-S <ttenx@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
futures = "0.3.5"
async-std = "1.6.3"
rand_pwd = { git = "https://github.com/TENX-S/rand_pwd", branch = "master" }
